# fslfeatsetup

./: .gitignore  EVs.py  FSF.py  FSFLabels.py  LICENSE.md  README.md  dot.fsf  setup.cfg  test.py
docs/: FunctionSignatures.md
src/fsl-feat/: FSFLabels.py
src/fsl-feat-setup/: EVs.py
src/fslfeatsetup/: Comments.py  EVs.py  FSF.py  FSFLabels.py
src/fslfeatsetup.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: output_testfirstlevel.fsf  output_testhigherlevel.fsf  test.py
