[metadata]
name = fsl-feat-setup
version = 0.0.1
author = Chris Langfield
author_email = cal2254@cumc.columbia.edu
license = Attribution-NonCommercial-ShareAlike

description = a small set of tools for create FSL FEAT .fsf configuration files
url = https://github.com/chris-langfield/pyfsf


[options]
package_dir =
  = src
packages = find:
install_requires = fslpy
python_requires = >=3.8
