[metadata]
name = fslfeatsetup
version = 0.2.2
author = Chris Langfield
author_email = cal2254@cumc.columbia.edu
license = Attribution-NonCommercial-ShareAlike

description = a small set of tools for create FSL FEAT .fsf configuration files
url = https://github.com/chris-langfield/pyfsf

long_description = file: README.md
long_description_content_type=text/markdown


[options]
package_dir =
  = src
packages = fslfeatsetup
py_modules = FSF
install_requires = fslpy
python_requires = >=3.7
